@@ -25,7 +25,7 @@
 #    set term DEMOTERM
 # rather than the default terminal settings
 # E.g. (for image demo)
-#    setenv DEMOTERM "png truecolor enhanced font arial 8 transparent size 420,320"
+#    setenv DEMOTERM "png truecolor enhanced font 'arial,8' transparent size 420,320"
 #    ./webify.pl image
 #
 use Env qw(DEMOTERM GNUPLOT_LIB);
@@ -49,7 +49,7 @@ require "ctime.pl";
 	if ((defined $ENV{DEMOTERM}) && $DEMOTERM ne "") {
 	    print GNUPLOT "set term $DEMOTERM\n";
 	} else {
-	    print GNUPLOT "set term png enhanced font arial 8 transparent size 420,320\n";
+	    print GNUPLOT "set term png enhanced font 'arial,8' transparent size 420,320\n";
 	}
 	print GNUPLOT "set output \"$ARGV[0].$plot.png\"\n";
 
